--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -16,7 +16,8 @@
     "\n",
     "## General Outline\n",
     "\n",
-    "* Fix the missing values ( and change the targets to be integers)\n",
+    "* Make sure the data has the correct variable types, and the values make sense\n",
+    "  * Make sure the missing values are rectified and that the unique values make sense\n",
     "* Prod the data using some basic statistics like correlations, and some graphing\n",
     "* Pick a ML model that works well for binary classification and implement it\n",
     "* Discuss the Results"
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +100,206 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                int64\n",
+       "workclass         object\n",
+       "fnlwgt             int64\n",
+       "education         object\n",
+       "education-num      int64\n",
+       "marital-status    object\n",
+       "occupation        object\n",
+       "relationship      object\n",
+       "race              object\n",
+       "sex               object\n",
+       "capital-gain       int64\n",
+       "capital-loss       int64\n",
+       "hours-per-week     int64\n",
+       "native-country    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['State-gov', 'Self-emp-not-inc', 'Private', 'Federal-gov',\n",
+       "       'Local-gov', '?', 'Self-emp-inc', 'Without-pay', 'Never-worked',\n",
+       "       nan], dtype=object)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['workclass'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bachelors', 'HS-grad', '11th', 'Masters', '9th', 'Some-college',\n",
+       "       'Assoc-acdm', 'Assoc-voc', '7th-8th', 'Doctorate', 'Prof-school',\n",
+       "       '5th-6th', '10th', '1st-4th', 'Preschool', '12th'], dtype=object)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['education'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Never-married', 'Married-civ-spouse', 'Divorced',\n",
+       "       'Married-spouse-absent', 'Separated', 'Married-AF-spouse',\n",
+       "       'Widowed'], dtype=object)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['marital-status'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Adm-clerical', 'Exec-managerial', 'Handlers-cleaners',\n",
+       "       'Prof-specialty', 'Other-service', 'Sales', 'Craft-repair',\n",
+       "       'Transport-moving', 'Farming-fishing', 'Machine-op-inspct',\n",
+       "       'Tech-support', '?', 'Protective-serv', 'Armed-Forces',\n",
+       "       'Priv-house-serv', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['occupation'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Not-in-family', 'Husband', 'Wife', 'Own-child', 'Unmarried',\n",
+       "       'Other-relative'], dtype=object)"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['relationship'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['White', 'Black', 'Asian-Pac-Islander', 'Amer-Indian-Eskimo',\n",
+       "       'Other'], dtype=object)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['race'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['United-States', 'Cuba', 'Jamaica', 'India', '?', 'Mexico',\n",
+       "       'South', 'Puerto-Rico', 'Honduras', 'England', 'Canada', 'Germany',\n",
+       "       'Iran', 'Philippines', 'Italy', 'Poland', 'Columbia', 'Cambodia',\n",
+       "       'Thailand', 'Ecuador', 'Laos', 'Taiwan', 'Haiti', 'Portugal',\n",
+       "       'Dominican-Republic', 'El-Salvador', 'France', 'Guatemala',\n",
+       "       'China', 'Japan', 'Yugoslavia', 'Peru',\n",
+       "       'Outlying-US(Guam-USVI-etc)', 'Scotland', 'Trinadad&Tobago',\n",
+       "       'Greece', 'Nicaragua', 'Vietnam', 'Hong', 'Ireland', 'Hungary',\n",
+       "       'Holand-Netherlands', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X['native-country'].unique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Step 1: Data Cleaning\n",
     "\n",
-    "There isn't that much cleaning to do. The page on UCI's archive does say there are missing values so those will be converted to *Numpy's* **Nan** type for the sake of compatibility. This is marginally beneficial especially since missing values were only represented by question marks. \n",
+    "There isn't that much cleaning to do. the *unique* method and *dtypes* methods told us that everything should be fine, aside from the missing values mentioned in the documentation. The page on UCI's archive does say there are missing values so those will be converted to *Numpy's* **Nan** type for the sake of compatibility. This is marginally beneficial especially since missing values were only represented by question marks. \n",
     "\n",
     "There is the additional problem that the targets have not 2, but 4 different variables represented. \n",
     "\n",
@@ -113,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +327,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +352,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +392,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +415,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +458,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +580,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +719,7 @@
        "income                0.227687  1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
