--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -1331,22 +1331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 177,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Y_pred' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[176], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mY_pred\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Y_pred' is not defined"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "parameters = { 'max_depth': [3,4,5],\n",
+    "              'learning_rate': [0.1,0.05,0.01],\n",
+    "              'gamma': [0,0.25,1.0],\n",
+    "              'reg_lambda': [0,1.0,10.0],\n",
+    "              'scale_pos_weight': [1,3,5]\n",
+    "            }"
+   ]
   },
   {
    "cell_type": "code",
