--- a/UCIAdultDatasetAnalysis.ipynb
+++ b/UCIAdultDatasetAnalysis.ipynb
@@ -1335,11 +1335,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = { 'max_depth': [3,4,5],\n",
-    "              'learning_rate': [0.1,0.05,0.01],\n",
-    "              'gamma': [0,0.25,1.0],\n",
-    "              'reg_lambda': [0,1.0,10.0],\n",
-    "              'scale_pos_weight': [1,3,5]\n",
+    "parameters = { \n",
+    "                'max_depth': [3,4,5],\n",
+    "                'learning_rate': [0.1,0.05,0.01],\n",
+    "                'gamma': [0,0.25,1.0],\n",
+    "                'reg_lambda': [0,1.0,10.0],\n",
+    "                'scale_pos_weight': [1,3,5]\n",
     "            }"
    ]
   },
